<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#993"
    tools:context="com.example.android.tic_tac_toe.SeriesResult">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/result_text"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textColor="#1affff"
        android:textSize="38sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
      >
        <TextView
            android:id="@+id/p1name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/player_1_default_name"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:fontFamily="serif"/>
        <TextView
            android:id="@+id/p1wins"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/initial_games_played_0"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/game_left"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="#003366"
            android:textSize="30sp"
            android:fontFamily="serif"/>
        <TextView
            android:id="@+id/draws"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:text="@string/initial_games_played_0"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="40sp"/>


        <TextView
            android:id="@+id/p2name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/player_2_default_name"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:fontFamily="serif"/>
        <TextView
            android:id="@+id/p2wins"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/initial_games_played_0"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="#fff"
            android:textSize="40sp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:text="@string/continue_button_text"
        android:onClick="onClickContinue"
        android:textAlignment="center"
        android:background="@drawable/rounded"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>
</LinearLayout>
